--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "echarts": "^4.1.0",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "vue": "^2.5.2",
